--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -6,13 +6,15 @@
     <title>Wireframe</title>
     <link rel="stylesheet" href="style.css" />
   </head>
+
   <body>
     <header>
-      <h1>Wireframe</h1>
+      <h1>Project Fundamentals</h1>
       <p>
-        This is the default, provided code and no changes have been made yet.
+        Learn the purpose of README files, wireframes, and Git branches.
       </p>
     </header>
+
     <main>
       <article>
         <img src="placeholder.svg" alt="" />
@@ -24,6 +26,7 @@
         <a href="">Read more</a>
       </article>
     </main>
+
     <footer>
       <p>
         This is the default, provided code and no changes have been made yet.
