Adding first article README

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -16,14 +16,24 @@
     </header>
 
     <main>
-      <article>
-        <img src="placeholder.svg" alt="" />
-        <h2>Title</h2>
+      <article class="article big">
+        <img
+        src="https://t3.ftcdn.net/jpg/05/66/27/50/360_F_566275002_YQtAsgiv5rwmezP0DdmZFPP3dGgmO9O1.jpg"
+        alt="Illustration representing a README file"
+        class="photo big"
+        >
+        <h2>README Files</h2>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam,
-          voluptates. Quisquam, voluptates.
+          A README file explains what a project is, how to use it, and how to contribute.
+          It’s usually the first thing someone sees in a repository and acts like a quick guide or instruction manual for the project.
         </p>
-        <a href="">Read more</a>
+        <a
+        href="https://docs.github.com/en/repositories/managing-your-repositorys-settings-and-features/customizing-your-repository/about-readmes"
+        target="_blank"
+        rel="noopener noreferrer"
+        >
+          Read more
+        </a>
       </article>
     </main>
 
