Adding second article Wireframe

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -20,7 +20,7 @@
         <img
         src="https://t3.ftcdn.net/jpg/05/66/27/50/360_F_566275002_YQtAsgiv5rwmezP0DdmZFPP3dGgmO9O1.jpg"
         alt="Illustration representing a README file"
-        class="photo big"
+        class="picture big"
         >
         <h2>README Files</h2>
         <p>
@@ -35,6 +35,27 @@
           Read more
         </a>
       </article>
+
+      <article class="article small">
+        <img
+        src="./wireframe.png"
+        alt="Webpage wireframe sketch with header, text blocks, images, and buttons"
+        class="picture small"
+        >
+        <h2>Wireframe</h2>
+        <p>
+          A wireframe is a simple visual guide that shows the layout of a webpage or app.
+          It focuses on structure and placement of elements, helping designers plan the user interface before adding visuals or content.
+        </p>
+        <a
+        href="https://en.wikipedia.org/wiki/Website_wireframe"
+        target="_blank"
+        rel="noopener noreferrer"
+        >
+          Read more
+        </a>
+      </article>
+      
     </main>
 
     <footer>
