Adding third article Git Branch

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -55,7 +55,27 @@
           Read more
         </a>
       </article>
-      
+
+      <article class="article small">
+        <img
+        src="https://res.cloudinary.com/snyk/image/upload/v1615821731/wordpress-sync/image1-11.png"
+        alt="Diagram showing a main Git branch with feature branches splitting off"
+        class="picture small"
+        >
+        <h2>Git Branch</h2>
+        <p>
+          A Git branch is a separate line of development in a project.
+          It lets you work on new features or fixes without affecting the main code, and later you can merge your changes back safely.
+        </p>
+        <a
+        href="https://www.w3schools.com/git/git_branch.asp"
+        target="_blank"
+        rel="noopener noreferrer"
+        >
+          Read more
+        </a>
+      </article>
+
     </main>
 
     <footer>
