--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -80,7 +80,7 @@
 
     <footer>
       <p>
-        This is the default, provided code and no changes have been made yet.
+        &copy; 2025 Alicia Wynona Tjahjadi. All rights reserved.
       </p>
     </footer>
   </body>
